Set minimum width for sidenav to avoid wrapping as much as possible

--- a/src/app/baseline/wizard/wizard.component.scss
+++ b/src/app/baseline/wizard/wizard.component.scss
@@ -34,6 +34,7 @@
     flex: 0;
     margin-left: 24px;
     margin-top: 54px;
+    min-width: 300px;
 
     .mat-expansion-panel {
         background-color: #fafafa;
